--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   ],
   "scripts": {
     "build": "turbo build",
+    "cf-typegen:admin": "cd apps/admin && wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
+    "cf-typegen:user": "cd apps/user && wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "clean": "./scripts/clean.sh",
+    "deploy:admin": "cd apps/admin && opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "deploy:user": "cd apps/user && opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "locale": "turbo locale && bun prettier",
     "openapi": "turbo openapi && bun prettier",
     "prepare": "./scripts/prepare.sh",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,json}\"",
+    "preview:admin": "cd apps/admin && opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "preview:user": "cd apps/user && opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "release": "semantic-release",
     "update:deps": "./scripts/update-deps.sh",
     "update:shadcn": "./scripts/update-shadcn-ui.sh && bun prettier"
@@ -47,6 +53,9 @@
     ]
   },
   "prettier": "@workspace/prettier-config",
+  "dependencies": {
+    "@opennextjs/cloudflare": "^1.1.0"
+  },
   "devDependencies": {
     "@umijs/openapi": "^1.13.0",
     "@workspace/commitlint-config": "workspace:*",
@@ -58,7 +67,8 @@
     "semantic-release": "21.1.2",
     "semantic-release-config-gitmoji": "^1.5.3",
     "turbo": "^2.3.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "wrangler": "^4.18.0"
   },
   "packageManager": "bun@1.1.43",
   "engines": {
